Check guest when check permission

--- a/index.yaml
+++ b/index.yaml
@@ -35,3 +35,10 @@ indexes:
   - name: deleted
   - name: group
   - name: update_time
+
+- kind: Topic
+  properties:
+  - name: deleted
+  - name: group
+  - name: update_time
+    direction: desc
