Upgrade recommend groups to new forward Action.

--- a/index.yaml
+++ b/index.yaml
@@ -42,3 +42,9 @@ indexes:
   - name: group
   - name: update_time
     direction: desc
+
+- kind: Topic
+  properties:
+  - name: deleted
+  - name: update_time
+    direction: desc
