add follower and following list for user home

--- a/index.yaml
+++ b/index.yaml
@@ -125,3 +125,9 @@ indexes:
   - name: deleted
   - name: create_at
     direction: desc
+
+- kind: UserStream
+  properties:
+  - name: deleted
+  - name: create_at
+    direction: desc
