--- a/index.yaml
+++ b/index.yaml
@@ -153,5 +153,17 @@ indexes:
 - kind: UserStream
   properties:
   - name: deleted
+  - name: keywords
+
+- kind: UserStream
+  properties:
+  - name: deleted
+  - name: keywords
+  - name: create_at
+    direction: desc
+
+- kind: UserStream
+  properties:
+  - name: deleted
   - name: update_at
     direction: desc
